@@ -1,5 +1,8 @@
 2011-01-11  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* config/x_ac_getgrent.m4, config/x_ac_getpwnam.m4:
+	  Renamed Sun references to SunOS.
+
 	* configure.ac, config/x_ac_getpwnam.m4: Added X_AC_GETPWNAM.
 
 2011-01-09  Chris Dunlap  <cdunlap@llnl.gov>
